integrations/tiered-ws-proxy-eg/k8s/l1-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: tiered-ws-proxy-eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: l1
  namespace: default
spec:
  gatewayClassName: tiered-ws-proxy-eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: l1
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: l1.ws-proxy.example.com
